[package]
name = "pulumi-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Pulumi provider code generator from IaC forge IR"
homepage = "https://github.com/pleme-io/pulumi-forge"
repository = "https://github.com/pleme-io/pulumi-forge"
documentation = "https://docs.rs/pulumi-forge"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "code-generators"]
keywords = ["pulumi", "codegen", "iac", "provider"]

[lints.clippy]
pedantic = "warn"

[dependencies]
iac-forge = { git = "https://github.com/pleme-io/iac-forge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
